--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-rangeslider": "^2.2.4",
     "@types/recharts": "^1.8.24",
     "@types/ws": "^8.5.4",
+    "dotenv": "^16.0.3",
     "express-openapi-validator": "^5.0.3",
     "moment": "^2.29.4",
     "openapi-types": "^12.1.0",
